# meia-tese

./: .gitignore  CLAUDE.md  THESIS_PLAN.md
emtrega3_recurso/: Makefile  main.bbl-SAVE-ERROR  main.bcf  main.lol  main.tex  mainbibliography.bib  meia-style.cls
old_stuff/: Google.md  TODO  iteracao1_extracted.txt  tese_carlos_extracted.txt  user_thesis_extracted.txt
testforge/: README.md  pyproject.toml
testforge/docker/: Dockerfile.sandbox  docker-compose.yml
testforge/examples/flask_api_tests/: demo_app.py  test_users_golden_1.py  test_users_golden_2.py  test_users_golden_3.py
testforge/src/testforge/: __init__.py  config.py  context_store.py  letta_agent.py  main.py
testforge/src/testforge/agents/: base.py
testforge/src/testforge/agents/analyzer/: ast_analyzer.py  pattern_extractor.py
testforge/src/testforge/agents/executor/: runner.py  sandbox.py
testforge/src/testforge/agents/generator/: api_test_gen.py  lib_test_gen.py  llm_eval_gen.py  ui_test_gen.py
testforge/src/testforge/agents/mapper/: api_mapper.py  dependency.py  ui_mapper.py
testforge/src/testforge/agents/observer/: browser.py  http_proxy.py  llm_calls.py
testforge/src/testforge/agents/validator/: flakiness.py  quality.py
testforge/src/testforge/llm/: gateway.py
testforge/src/testforge/llm/prompts/: api_test_gen.py
testforge/src/testforge/models/: __init__.py  app_context.py  interactions.py  results.py  style_guide.py  test_model.py
testforge/src/testforge/orchestration/: engine.py  golden_pipeline.py  observer_pipeline.py
testforge/src/testforge/ui/: streamlit_app.py
(+77 files in other folders)
