[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testforge"
version = "0.1.0"
description = "Automated test generation platform using multi-agent systems and LLMs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "litellm>=1.50.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "streamlit>=1.40.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "aiosqlite>=0.20.0",
    "rich>=13.9.0",
    "python-multipart>=0.0.20",
    "letta-client>=1.7.0",
]

[project.optional-dependencies]
observer = [
    "mitmproxy>=11.0.0",
    "playwright>=1.49.0",
]
letta-server = [
    "letta>=0.16.0",
]
docker = [
    "docker>=7.1.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
testforge = "testforge.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/testforge"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
